--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div class="sidebar">
+            <h1>funziona?</h1>
             <h2>Graph Controls</h2>
             <div class="controls">
                 <button id="addNode">Add Node</button>
