--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+    <!-- <div class="container"> -->
         <div class="sidebar">
             <h1>funziona?</h1>
             <h2>Graph Controls</h2>
